resolved issue in recall.ejs where shape container and message were overlapping

--- a/public/css/recall.css
+++ b/public/css/recall.css
@@ -70,6 +70,10 @@ header {
     gap: 4rem;
 }
 
+.instructionsContainer {
+    margin-top: 5rem;
+}
+
 .instructionItems {
     display: flex;
     flex-direction: column;
@@ -89,7 +93,7 @@ main {
 }
 
 #shape-container {
-    height: 1.5rem;
+    height: 20rem;
     gap: 5rem;
     text-align: center;
 }
